Added History json schema
