# apps/api/schemas.py
@@ -19,3 +19,9 @@ class RegionShortStatusSchema(SQLAlchemyAutoSchema):
     class Meta:
         model = RegionStatus
         fields = ("region_id", "is_alert")
+
+
+class HistoryRegionStatusSchema(SQLAlchemyAutoSchema):
+    class Meta:
+        model = RegionStatus
+        fields = ("id", "region_id", "is_alert", "timestamp", "end_timestamp")
